--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,15 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/artesanato
 spring.datasource.username=root
 spring.datasource.password=root
 
+
+
 server.error.include-message=always
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=optic11051997@gmail.com
+spring.mail.password=ojnoqfcxfsdxuogc 
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
